tests/struct_arg_count_error.june
// error: expected: 2, found: 1

struct Employee {
    name: string,
    age: i64,
}

fun main() {
    let employee = new shared Employee(name: "Bob")
    println(employee.age)
}